buildscript {
    repositories {
        mavenCentral()
        maven { name = 'forge'; url = 'https://files.minecraftforge.net/maven' }
        maven { name = 'sonatype'; url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3.4'
    }
}

plugins {
    id 'java'
}

apply plugin: 'net.minecraftforge.gradle.forge'

version = '0.1.0-beta.1'
group = 'levosilimo.everlastingskins'
archivesBaseName = 'everlastingskins-1.12.2'

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8

minecraft {
    version = '1.12.2-14.23.5.2847'
    runDir = 'run'
    mappings = 'snapshot_20171003'
    replace '@VERSION@', project.version
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
            // Exclude Mixin support files — no Mixin annotation processor configured for 1.12.2
            exclude 'levosilimo/everlastingskins/mixin/**'
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // JUnit 5 for test source set
    testCompile 'org.junit.jupiter:junit-jupiter-api:5.10.3'
    testCompile 'org.junit.jupiter:junit-jupiter-params:5.10.3'
    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.10.3'
    testRuntime 'org.junit.platform:junit-platform-launcher:1.10.3'
}

test {
    useJUnitPlatform()
    // Prevent test task from failing if no tests are found (clean build)
    testLogging {
        events "passed", "skipped", "failed"
    }
}

processResources {
    from(sourceSets.main.resources.srcDirs) {
        include 'mcmod.info'
        expand 'version': project.version, 'mcversion': project.minecraft.version
    }
    from(sourceSets.main.resources.srcDirs) {
        exclude 'mcmod.info'
    }
}

jar {
    manifest {
        attributes([
            'Specification-Title': archivesBaseName,
            'Specification-Vendor': 'Levosilimo',
            'Specification-Version': project.version,
            'Implementation-Title': project.name,
            'Implementation-Version': project.version,
            'Implementation-Vendor': 'Levosilimo'
        ])
    }
}
